cmake_minimum_required(VERSION 3.16)
project(SpeedTestCXX)

option(ENABLE_CXX "Turn on CXX speed test" ON)
option(ENABLE_C "Turn on C speed test" ON)
option(ENABLE_FORTRAN "Turn on Fortran speed test" ON)
option(ENABLE_PYTHON "Turn on Python speed test" ON)
option(N_MSG "Number of messages that should be sent" 100)
option(S_MSG "Size of messages that should be sent" 100)
option(COMM "Communicator type that should be used" DEFAULT_COMM)
set(SPEED_TEST_N_MSG ${N_MSG})
set(SPEED_TEST_S_MSG ${S_MSG})
set(SPEED_TEST_COMM ${COMM})

enable_testing()
if (ENABLE_C)
  add_subdirectory(C)
endif()
if (ENABLE_CXX)
  add_subdirectory(CXX)
endif()
if (ENABLE_FORTRAN)
  add_subdirectory(FORTRAN)
endif()
if (ENABLE_PYTHON)
  add_subdirectory(PYTHON)
endif()
